<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2007 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->

<!-- Demonstrates starting and stopping a local service.
     See corresponding Java code com.google.android.sdk.app.LocalSerice.java. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="4dip"
    android:gravity="center_horizontal"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <TextView
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="4dip"
        android:textStyle="bold"
        android:text="@string/jetty_controller"/>

    <Button android:id="@+id/start"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/start_jetty">
        <requestFocus />
    </Button>

    <Button android:id="@+id/stop"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/stop_jetty">
    </Button>

    <Button android:id="@+id/config"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/config_jetty">
    </Button>
    
    <Button android:id="@+id/download"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/download_webapp"/>

    <TextView
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_weight="0"        
        android:textStyle="bold"
        android:paddingTop="4dip"
        android:paddingBottom="2dip"
        android:text="@string/interfaces"/>

    <ListView android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0">
    </ListView>


</LinearLayout>

